--- a/components/_variables.scss
+++ b/components/_variables.scss
@@ -63,3 +63,7 @@ $toolBarHeight: 50px;
 $toolBarPadding: 10px;
 $toolBarSectionSpacing: 50px;
 $toolBarItsemSpacing: 10px;
+
+// Form
+$globalFormControlHorizontalPadding: 12px;
+$globalFormControlPadding: 3px $globalFormControlHorizontalPadding 4px;
