--- a/components/local_nav/_local_nav.scss
+++ b/components/local_nav/_local_nav.scss
@@ -10,6 +10,7 @@
   min-height: 70px; /* 1 */
   color: $localNavTextColor;
   background-color: $localNavBackgroundColor;
+  line-height: $globalLineHeight;
 
   @include darkTheme {
     color: $localNavTextColor--darkTheme;
