--- a/components/button/_index.scss
+++ b/components/button/_index.scss
@@ -1,7 +1,13 @@
 // All buttons
 $buttonHeight: 30px;
 $buttonIconSpacing: 8px;
+$buttonIconSmallSpacing: 4px;
 $buttonFontWeight: $globalFontWeightRegular;
+
+// Size
+$buttonSmallFontSize: 12px;
+$buttonSmallPadding: 2px 8px 3px;
+$buttonSmallHeight: 22px;
 
 // Most buttons
 $buttonDefaultTextColor: #FFF;
