Convert Index Pattern Creation form UI to use UI Framework components. (#11419)
* Convert Index Pattern Creation form UI to use UI Framework components.
* Mark matching-indices percentage InfoPanel red if there are 0% matching indices.
* Fix controller logic for extracting correct form values when nameIsPattern is changed.
* Localize 'indices do not contain time fields' warning.
* Document new form components: Label, CheckBoxLabel, large Select, and large TextInput.

--- a/components/form/_text_input.scss
+++ b/components/form/_text_input.scss
@@ -3,5 +3,11 @@
 }
 
 .kuiTextInput--small {
-  width: 60px;
+  width: 100%;
+  max-width: 60px;
+}
+
+.kuiTextInput--large {
+  width: 100%;
+  max-width: 400px;
 }
