--- a/doc_site/src/views/form/select.html
+++ b/doc_site/src/views/form/select.html
@@ -9,3 +9,9 @@
 <select class="kuiSelect" disabled>
   <option>Disabled</option>
 </select>
+
+<hr class="guideBreak">
+
+<select class="kuiSelect kuiSelect--large" disabled>
+  <option>Large</option>
+</select>
