--- a/doc_site/src/views/form/text_input.html
+++ b/doc_site/src/views/form/text_input.html
@@ -11,3 +11,11 @@
 <hr class="guideBreak">
 
 <input type="text" class="kuiTextInput" value="Disabled" disabled>
+
+<hr class="guideBreak">
+
+<input type="text" class="kuiTextInput kuiTextInput--small" placeholder="Small">
+
+<hr class="guideBreak">
+
+<input type="text" class="kuiTextInput kuiTextInput--large" placeholder="Large">
