UiFramework: Modals in react (#11500)
* Reactify the confirmation modal

Up next: jest tests

* Add tests

- Relies on https://github.com/elastic/kibana/pull/10821 getting
checked in first for commonHtmlProps

* Don't include the overlay as part of the confirm modal component

* Use the react version of a confirmation modal

- Can’t use the modalOverlay or it would be two nested react roots, due
to the way it’s embedded in angular.

* Add snapshots

* Fix tests

* fix confirm_modal_promise tests

I have no idea why the introduction of react would cause this to fail
as it was, but for some reason, grabbing the button reference has to be
after the digest loop.

* Address code review comments

* switch over the remaining React.PropType references (in the modals dir anyway)

--- a/components/modal/_modal.scss
+++ b/components/modal/_modal.scss
@@ -4,6 +4,7 @@
   border: 1px solid $modalBorderColor;
   border-radius: $globalBorderRadius;
   box-shadow: 0 5px 22px rgba(#000000, 0.25);
+  z-index: $globalModalDepth + 1;
 }
 
 .kuiModalHeader {
