--- a/components/modal/_index.scss
+++ b/components/modal/_index.scss
@@ -2,6 +2,7 @@ $modalPadding: 10px;
 $modalBorderColor: #6EADC1;
 $modalBackgroundColor: #FFF;
 $modalOverlayBackground: rgba(#000000, 0.3);
+$globalModalDepth: 1000;
 
 @import "modal_overlay";
 @import "modal";
