Make CardGroup split apart by default. Add kuiCardGroup--united modifier. (#11580)
- Also remove unused kuiNotice classes.

--- a/components/card/_card_group.scss
+++ b/components/card/_card_group.scss
@@ -1,21 +1,31 @@
 .kuiCardGroup {
   display: flex;
-  border: 1px solid $cardBorderColor;
-  border-radius: $globalBorderRadius;
-  overflow: hidden;
-  margin-bottom: 18px;
 }
 
   .kuiCardGroup__card {
     flex: 1 1 0%;
-    border: none;
-    border-radius: 0;
 
     & + & {
-      border-left: 1px solid $cardBorderColor;
+      margin-left: 30px;
     }
   }
 
   .kuiCardGroup__cardDescription {
     flex: 1 1 auto;
   }
+
+.kuiCardGroup--united {
+  border: 1px solid $cardBorderColor;
+  border-radius: $globalBorderRadius;
+  overflow: hidden;
+
+  .kuiCardGroup__card {
+    border: none;
+    border-radius: 0;
+  }
+
+  .kuiCardGroup__card + .kuiCardGroup__card {
+    margin-left: 0;
+    border-left: 1px solid $cardBorderColor;
+  }
+}
