Create CollapseButton component class to standardize appearance of this button. (#11462)
* Create CollapseButton component class to standardize appearance of this button.
* Fix positioning of LocalSearch icon.
* Update collapsible-sidebar directive and Discover page object to use test subject selector.
* Refactor 'closed' class assignment.

--- a/components/_mixins.scss
+++ b/components/_mixins.scss
@@ -32,6 +32,25 @@
 }
 
 /**
+ * 1. Override Bootstrap styles.
+ */
+@mixin collapseButton {
+  appearance: none;
+  background-color: transparent;
+  padding: 4px;
+  border: none;
+  line-height: 1;
+  font-size: 16px;
+  color: $globalTextColor !important; /* 1 */
+  cursor: pointer;
+  opacity: 0.35;
+
+  &:hover {
+    opacity: 1;
+  }
+}
+
+/**
  * 1. Links can't have a disabled attribute, so they can't support :disabled.
  */
 @mixin kuiButtonDisabled {
