--- a/components/index.scss
+++ b/components/index.scss
@@ -24,6 +24,7 @@
 @import "bar/index";
 @import "button/index";
 @import "card/index";
+@import "collapse_button/index";
 @import "column/index";
 @import "event/index";
 @import "form/index";
