--- a/doc_site/src/main.scss
+++ b/doc_site/src/main.scss
@@ -52,3 +52,37 @@ body {
 .guideBreak {
   border: none;
 }
+
+.guidePaginationButtons {
+  position: fixed;
+  z-index: 10001;
+  top: 10px;
+  right: 10px;
+}
+
+.guidePaginationButton {
+  appearance: none;
+  border: none;
+  line-height: 10px;
+  padding: 4px 20px;
+  color: $guideLinkHoverColor;
+  background-color: #fff;
+  border: 1px solid $guideLinkHoverColor;
+  border-radius: 3px;
+  cursor: pointer;
+
+  &:hover,
+  &:active {
+    background-color: #e6f7fc;
+  }
+
+  &.guidePaginationButton-isDisabled {
+    pointer-events: none;
+    color: rgba($guideTextColor, 0.25);
+    border-color: rgba($guideTextColor, 0.25);
+  }
+
+  & + & {
+    margin-left: 10px;
+  }
+}
