Add Elastic logo to UI Framework doc site. (#11686)

--- a/doc_site/src/components/guide_code_viewer/_guide_code_viewer.scss
+++ b/doc_site/src/components/guide_code_viewer/_guide_code_viewer.scss
@@ -13,7 +13,7 @@
 
   @include scrollbar;
 
-  @include whenNarrowerThan($normalBreakpoint) {
+  @include whenNarrowerThan($guideNormalBreakpoint) {
     width: $guideCodeViewerSmallWidth;
   }
 
