--- a/doc_site/src/variables.scss
+++ b/doc_site/src/variables.scss
@@ -10,6 +10,7 @@ $guideCodeViewerTransition: 0.2s ease;
 $guideBaseBackgroundColor: #f7f7f7;
 $guidePanelBackgroundColor: #ffffff;
 $guideTextColor: #444;
+$guideLinkColor: #00a9e5;
 $guideLinkHoverColor: #00a9e5;
 
 // Breakpoints
