--- a/components/card/_card_group.scss
+++ b/components/card/_card_group.scss
@@ -1,20 +1,36 @@
-.kuiCardGroup {
-  display: flex;
+/**
+ * 1. Use this container to offset the spacing between wrapped cards.
+ */
+.kuiCardGroupContainer {
+  margin: -$cardSpacing; /* 1 */
 }
 
-  .kuiCardGroup__card {
-    flex: 1 1 0%;
+/**
+ * 1. Wrap cards when necessary.
+ */
+.kuiCardGroup {
+  display: flex;
+  flex-wrap: wrap; /* 1 */
+}
 
-    & + & {
-      margin-left: 30px;
-    }
+  /**
+   * 1. Use the defined width of the card to determine when to wrap.
+   * 2. Use an even margin all around the card so that the spacing is still even when wrapped.
+   */
+  .kuiCardGroup__card {
+    flex: 1 1 auto; /* 1 */
+    margin: $cardSpacing; /* 2 */
   }
 
   .kuiCardGroup__cardDescription {
     flex: 1 1 auto;
   }
 
+/**
+ * 1. There's no way to make this look good when wrapped.
+ */
 .kuiCardGroup--united {
+  flex-wrap: nowrap; /* 1 */
   border: 1px solid $cardBorderColor;
   border-radius: $globalBorderRadius;
   overflow: hidden;
@@ -25,7 +41,7 @@
   }
 
   .kuiCardGroup__card + .kuiCardGroup__card {
-    margin-left: 0;
+    margin: 0;
     border-left: 1px solid $cardBorderColor;
   }
 }
