Update CardGroup component example to exhibit stacking on smaller screens. (#11751)

--- a/doc_site/src/views/card/card_group.html
+++ b/doc_site/src/views/card/card_group.html
@@ -1,6 +1,6 @@
 <div class="kuiCardGroupContainer">
   <div class="kuiCardGroup">
-    <div class="kuiCard kuiCardGroup__card">
+    <div class="kuiCard kuiCardGroup__card" style="width: 400px">
       <div class="kuiCard__description kuiCardGroup__cardDescription">
         <div class="kuiCard__descriptionTitle">
           Get a banana
@@ -18,7 +18,7 @@
       </div>
     </div>
 
-    <div class="kuiCard kuiCardGroup__card">
+    <div class="kuiCard kuiCardGroup__card" style="width: 400px">
       <div class="kuiCard__description kuiCardGroup__cardDescription">
         <div class="kuiCard__descriptionTitle">
           Get a pteradactyl
