[UI Framework] Add KuiInfoButton component (#11811)
* add help_icon component

* rename to info_button

* build

* info button example

* info button test

* fix example

* change bg color and add padding:0

* make component include all props

* set color with a variable

* use bgcolor transparent

* example guide text fix

* update markup to allow component class to set font-size

* use globalLinkColor instead of new color value

--- a/components/index.scss
+++ b/components/index.scss
@@ -31,6 +31,7 @@
 @import "form_layout/index";
 @import "gallery/index";
 @import "header_bar/index";
+@import "info_button/index";
 @import "icon/index";
 @import "info_panel/index";
 @import "link/index";
