Adding table_info component (#11778)
* Adding loading-results component

* Adding example usage on testbed

* Fixing module name

* Adding kuiControlledTable container

* Replacing kuiNoItems and kuiLoadingResults with kuiTableInfo

* Making directive compositional

* Fixing imports

* Re-generating fixed CSS

--- a/components/index.scss
+++ b/components/index.scss
@@ -35,18 +35,17 @@
 @import "icon/index";
 @import "info_panel/index";
 @import "link/index";
-@import "loading_items/index";
 @import "local_nav/index";
 @import "menu/index";
 @import "menu_button/index";
 @import "micro_button/index";
 @import "modal/index";
-@import "no_items/index";
 @import "notice/index";
 @import "panel/index";
 @import "prompt_for_items/index";
 @import "status_text/index";
 @import "table/index";
+@import "table_info/index";
 @import "tabs/index";
 @import "toggle_button/index";
 @import "tool_bar/index";
