Adding sortable-column component (#11780)
* Adding sortable-column component

* Adding testbed example

* Use Angular's $watchGroup instead of Kibana's $watchMulti

* Changing getters to regular methods

* Adding kuiTableHeaderCell__liner class to uiFramework

* s/target/currentTarget/

* Fixing markup

* Cleaning up testbed

--- a/components/table/_table.scss
+++ b/components/table/_table.scss
@@ -38,6 +38,10 @@
   color: $tableHeaderTextColor;
 }
 
+.kuiTableHeaderCell__liner {
+  display: inline-block;
+}
+
 /**
  * 1. Prevent rapid clicking from selecting text.
  */
