--- a/doc_site/src/views/table/table.html
+++ b/doc_site/src/views/table/table.html
@@ -5,14 +5,18 @@
         <input type="checkbox" class="kuiCheckBox">
       </th>
       <th class="kuiTableHeaderCell kuiTableHeaderCell--sortable" data-demo-sortable-column>
-        Title
-        <span data-sort-icon-ascending class="kuiTableSortIcon kuiIcon fa-long-arrow-up"></span>
-        <span data-sort-icon-descending class="kuiTableSortIcon kuiIcon fa-long-arrow-down"></span>
+        <div class="kuiTableHeaderCell__liner">
+          Title
+          <span data-sort-icon-ascending class="kuiTableSortIcon kuiIcon fa-long-arrow-up"></span>
+          <span data-sort-icon-descending class="kuiTableSortIcon kuiIcon fa-long-arrow-down"></span>
+        </div>
       </th>
       <th class="kuiTableHeaderCell kuiTableHeaderCell--sortable" data-demo-sortable-column>
-        Status
-        <span data-sort-icon-ascending class="kuiTableSortIcon kuiIcon fa-long-arrow-up"></span>
-        <span data-sort-icon-descending class="kuiTableSortIcon kuiIcon fa-long-arrow-down"></span>
+        <div class="kuiTableHeaderCell__liner">
+          Status
+          <span data-sort-icon-ascending class="kuiTableSortIcon kuiIcon fa-long-arrow-up"></span>
+          <span data-sort-icon-descending class="kuiTableSortIcon kuiIcon fa-long-arrow-down"></span>
+        </div>
       </th>
       <th class="kuiTableHeaderCell">
         Date created
