Add isInvalid states for TextInput, TextArea, and SearchInput components. (#11995)

--- a/components/_mixins.scss
+++ b/components/_mixins.scss
@@ -147,15 +147,8 @@
   border-radius: $borderRadius;
   transition: border-color $globalInputTransitionTiming;
 
-  /**
-   * 1. Angular will add an ng-untouched class to an input if it hasn't been touched yet.
-   *    We only want invalid inputs to appear invalid after the user has had a chance to interact
-   *    with it.
-   */
   &:invalid {
-    &:not(.ng-untouched) { /* 1 */
-      border-color: $globalDangerBorderColor;
-    }
+    @include formControlInvalid;
   }
 
   &:focus {
@@ -174,6 +167,17 @@
     &:focus {
       @include formControlFocus;
     }
+  }
+}
+
+/**
+ * 1. Angular will add an ng-untouched class to an input if it hasn't been touched yet.
+ *    We only want invalid inputs to appear invalid after the user has had a chance to interact
+ *    with it.
+ */
+@mixin formControlInvalid {
+  &:not(.ng-untouched) { /* 1 */
+    border-color: $globalDangerBorderColor;
   }
 }
 
