Support multiline Timelion queries (#11972)
* Hardcode textarea input into timelion-expression-input.
- Document problems with using contenteditable.
- Use Angular directives to handle focus, blur, keydown, and keyup events.
- Also move getCaretOffset and setCaretOffset into the directive definition.
- Hide suggestions when the directive loses focuses.
- Show suggestions when the directive gains focus.
- Preserve focus when the user clicks a suggestion.
* Move expression input out of LocalNav and into main content area, so it won't overlap with graphs when focused.
* Refine design.
- Make suggestions popover charts instead of pushing them down.
- Align controls to top of expression input if the textarea is resized to be tall.
* Keep suggestions visible until the expression is complete and valid.
* Execute query with CMD+ENTER, to mirror Console behavior.
* Update UI so that textarea indicates it can support multiple lines, by having a taller min-height.
* Rename Timelion Docs to Help, for consistency with Console.
* Add keyboard tips to Timelion Help.
* Extract combobox keyboard codes to UI Framework comboBoxKeyCodes service.
* Add auto-complete tips to Help dropdown.

--- a/components/_mixins.scss
+++ b/components/_mixins.scss
@@ -140,12 +140,16 @@
   }
 }
 
+/**
+ * 1. Prevent Firefox users from being able to resize textareas to smaller than the min-height.
+ */
 @mixin formControl($borderRadius: $globalBorderRadius) {
   @include formControlBase;
   background-color: #ffffff;
   border: 1px solid $globalFormControlBorderColor;
   border-radius: $borderRadius;
   transition: border-color $globalInputTransitionTiming;
+  min-height: $globalFormInputHeight; /* 1 */
 
   &:invalid {
     @include formControlInvalid;
