Adding a warning button and making the notifier use it for warnings (#11829)
* Adding a warning button and making the notifier use it for warnings

* Adding 'warning' to the BUTTON_TYPES

* Fixing test

--- a/components/_variables.scss
+++ b/components/_variables.scss
@@ -53,6 +53,7 @@ $globalWarningColor: #ec9800;
 $globalDangerColor: #D86051;
 $globalFocusColor: #6EADC1;
 $globalFocusDangerColor: #ff523c;
+$globalFocusWarningColor: #ffa500;
 $globalFocusBackgroundColor: #ffffff;
 $globalFontColor: #191E23;
 $globalSubduedTextColor: #9fa3a7;
