[UI Framework] reactify prompt for items (#12151)
* reactify prompt for items

* Rename to EmptyTablePrompt

Update snapshots

* Add empty table prompt panel and an additional guide section for use in a controlled table

* Use more generic props instead of add specific ones.

--- a/components/empty_table_prompt/_empty_table_prompt.scss
+++ b/components/empty_table_prompt/_empty_table_prompt.scss
@@ -1,16 +1,16 @@
-.kuiPromptForItems {
+.kuiEmptyTablePrompt {
   display: flex;
   flex-direction: column;
   align-items: center;
   padding: 30px;
 }
 
-  .kuiPromptForItems__message {
+  .kuiEmptyTablePrompt__message {
     font-size: $globalTitleFontSize;
     color: $globalSubduedTextColor;
     line-height: $globalLineHeight;
   }
 
-  .kuiPromptForItems__actions {
+  .kuiEmptyTablePrompt__actions {
     margin-top: 10px;
   }
