--- a/doc_site/src/views/table/controlled_table_empty_table_prompt.html
+++ b/doc_site/src/views/table/controlled_table_empty_table_prompt.html
@@ -42,14 +42,14 @@
     </div>
   </div>
 
-  <!-- PromptForItems -->
+  <!-- EmptyTablePrompt -->
   <div class="kuiPanel kuiPanel--centered kuiPanel--withHeader">
-    <div class="kuiPromptForItems">
-      <div class="kuiPromptForItems__message">
+    <div class="kuiEmptyTablePrompt">
+      <div class="kuiEmptyTablePrompt__message">
         Looks like you don&rsquo;t have any items. Let&rsquo;s add some!
       </div>
 
-      <div class="kuiPromptForItems__actions">
+      <div class="kuiEmptyTablePrompt__actions">
         <button class="kuiButton kuiButton--primary kuiButton--iconText">
           <span class="kuiButton__icon kuiIcon fa-plus"></span>
           Add an item
