--- a/components/index.scss
+++ b/components/index.scss
@@ -44,7 +44,7 @@
 @import "notice/index";
 @import "pager/index";
 @import "panel/index";
-@import "prompt_for_items/index";
+@import "empty_table_prompt/index";
 @import "status_text/index";
 @import "table/index";
 @import "table_info/index";
