Timepicker on the right (#11980)
* quick panel moved to directive

* move relative to directive

* move absolute to directive

* move stuff from timepicker directive to new directives

* move timepicker to right with flexbox

* remove left padding for kbn-timepicker-section

* merge in timepicker.html changes from - Improve accessibility of the Datepicker. (#11753)

* Adjust markup and styles so that the Quick, Relative, and Absolute layouts all occupy the same bounds (#1)

* Adjust markup and styles so that the Quick, Relative, and Absolute layouts all occupy the same bounds, so the content doesn't jump around as you switch modes..

* Make kbn-timepicker-content responsive so that it stacks content on narrower screens.

* Combine Relative input and select fields using kuiFieldGroup.

* Make Timepicker submit button wider.

* Align button on right.

* migrate inputs from form-control to kui classes

* update generated dist/ui_framework.css

* fix broken tests

* create kbn-timerpicker-nav-button class and update kbn-timepicker-section to make each column the same width

--- a/components/form/_select.scss
+++ b/components/form/_select.scss
@@ -1,5 +1,11 @@
 .kuiSelect {
   @include select;
+
+  @include formControl;
+
+  &.kuiSelect-isInvalid {
+    @include formControlInvalid;
+  }
 }
 
 .kuiSelect--large {
