--- a/doc_site/src/views/form/select.html
+++ b/doc_site/src/views/form/select.html
@@ -12,6 +12,12 @@
 
 <hr class="guideBreak">
 
+<select class="kuiSelect kuiSelect-isInvalid">
+  <option>Invalid</option>
+</select>
+
+<hr class="guideBreak">
+
 <select class="kuiSelect kuiSelect--large" disabled>
   <option>Large</option>
 </select>
